--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "type-check": "vue-tsc --build",
         "lint": "eslint . --fix --cache",
         "lint:check": "eslint . --cache",
-        "format": "NODE_OPTIONS=\"--experimental-strip-types\" prettier --write .",
-        "format:check": "NODE_OPTIONS=\"--experimental-strip-types\" prettier --check ."
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.16",
